--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.40",
-    "@langchain/google-genai": "^0.1.8",
-    "@radix-ui/react-label": "^2.1.2",
+    "@google/generative-ai": "^0.22.0",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "langchain": "^0.3.19",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
